--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </header>
         <main class="flex-container">
             <div class="chart">
-                <canvas id="visualChart" width="100%" height="100%"></canvas>
+                <canvas id="visualChart"></canvas>
             </div>
             <aside class="feed">
                 <div class="card card--info">
@@ -65,7 +65,7 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"
         integrity="sha512-s+xg36jbIujB2S2VKfpGmlC3T5V2TF3lY48DX7u2r9XzGzgPsa6wTpOQA7J9iffvdeBN0q9tKzRxVxw1JviZPg=="
-        crossorigin="anonymous" defer></script>
+        crossorigin="anonymous"></script>
     <script src="./js/app.js"></script>
 
 </body>
