added the recovered data in the chart

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
                 <img src="./assets/logo.png" alt="logo">
             </div>
 
-            <!-- <img id="firstVirus" class="virus" src="./assets/blue-virus.png" alt="corona virus" width="80px"
+            <img id="firstVirus" class="virus" src="./assets/blue-virus.png" alt="corona virus" width="80px"
                 height="80px">
             <img id="secondVirus" class="virus" src="./assets/blue-virus.png" alt="corona virus" width="80px"
-                height="80px"> -->
+                height="80px">
 
             <select name="country" id="countrySelector" class="header__selection">
                 <option value="global" selected>--Global--</option>
