--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             <h3>Total number of infections</h3>
                         </div>
                         <div class="card__number">
-                            <h1>123456789</h1>
+                            <h1 id="confirmed">123456789</h1>
                         </div>
                     </div>
                 </div>
@@ -46,7 +46,7 @@
                             <h3>Total number of recoveries</h3>
                         </div>
                         <div class="card__number">
-                            <h1>1234567</h1>
+                            <h1 id="recovery">1234567</h1>
                         </div>
                     </div>
                 </div>
@@ -56,7 +56,7 @@
                             <h3>Total number of deaths</h3>
                         </div>
                         <div class="card__number">
-                            <h1>123456</h1>
+                            <h1 id="deaths">123456</h1>
                         </div>
                     </div>
                 </div>
@@ -66,7 +66,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"
         integrity="sha512-s+xg36jbIujB2S2VKfpGmlC3T5V2TF3lY48DX7u2r9XzGzgPsa6wTpOQA7J9iffvdeBN0q9tKzRxVxw1JviZPg=="
         crossorigin="anonymous"></script>
-    <script src="./js/app.js"></script>
+    <script src="./js/app.js" type="module"></script>
 
 </body>
 
