--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
                 <img src="./assets/logo.png" alt="logo">
             </div>
 
-            <img id="firstVirus" class="virus" src="./assets/blue-virus.png" alt="corona virus" width="80px"
+            <!-- <img id="firstVirus" class="virus" src="./assets/blue-virus.png" alt="corona virus" width="80px"
                 height="80px">
             <img id="secondVirus" class="virus" src="./assets/blue-virus.png" alt="corona virus" width="80px"
-                height="80px">
+                height="80px"> -->
 
             <select name="country" id="countrySelector" class="header__selection">
                 <option value="global" selected>--Global--</option>
@@ -66,7 +66,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"
         integrity="sha512-s+xg36jbIujB2S2VKfpGmlC3T5V2TF3lY48DX7u2r9XzGzgPsa6wTpOQA7J9iffvdeBN0q9tKzRxVxw1JviZPg=="
         crossorigin="anonymous"></script>
-    <script src="./js/app.js"></script>
+    <script src="./js/app.js" type="module"></script>
 
 </body>
 
