--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                             <h3>Total number of infections</h3>
                         </div>
                         <div class="card__number">
-                            <h1 id="confirmed">123456789</h1>
+                            <h1 id="confirmed"></h1>
                         </div>
                     </div>
                 </div>
@@ -46,7 +46,7 @@
                             <h3>Total number of recoveries</h3>
                         </div>
                         <div class="card__number">
-                            <h1 id="recovery">1234567</h1>
+                            <h1 id="recovery"></h1>
                         </div>
                     </div>
                 </div>
@@ -56,7 +56,7 @@
                             <h3>Total number of deaths</h3>
                         </div>
                         <div class="card__number">
-                            <h1 id="deaths">123456</h1>
+                            <h1 id="deaths"></h1>
                         </div>
                     </div>
                 </div>
