one more commit

--- a/index.html
+++ b/index.html
@@ -62,6 +62,21 @@
                 </div>
             </aside>
         </main>
+        <section class="news">
+            <h2 class="news__heading">NEWS</h2>
+            <div class="news_body">
+                <a href="#" target="_blank" class="news__card">
+                    <img class="news__image" src="./assets/virus.png" alt="news image" width="80px" height="50px" />
+                    <div class="news__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem,
+                        animi dignissimos. Maxime ipsum beatae sit.</div>
+                </a>
+                <a href="#" target="_blank" class="news__card">
+                    <img class="news__image" src="./assets/virus.png" alt="news image" width="80px" height="50px" />
+                    <div class="news__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem,
+                        animi dignissimos. Maxime ipsum beatae sit.</div>
+                </a>
+            </div>
+        </section>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"
         integrity="sha512-s+xg36jbIujB2S2VKfpGmlC3T5V2TF3lY48DX7u2r9XzGzgPsa6wTpOQA7J9iffvdeBN0q9tKzRxVxw1JviZPg=="
