added initial data fetching for the cards

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <div class="container">
+        <h1 id="loader" style="display: none;">loading..</h1>
         <header class="header">
             <div class="header__logo">
                 <img src="./assets/logo.png" alt="logo">
@@ -23,6 +24,8 @@
             <select name="country" id="countrySelector" class="header__selection">
                 <option value="global" selected>--Global--</option>
             </select>
+
+            <div class="line-loader"></div>
 
         </header>
         <main class="flex-container">
