--- a/index.html
+++ b/index.html
@@ -1,91 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coronavirus Tracker</title>
-    <link rel="stylesheet" href="./css/style.css">
-</head>
+    <link rel="stylesheet" href="./css/style.css" />
+  </head>
 
-<body>
+  <body>
     <div class="container">
-        <h1 id="loader" style="display: none;">loading..</h1>
-        <header class="header">
-            <div class="header__logo">
-                <img src="./assets/logo.png" alt="logo">
-            </div>
+      <h1 id="loader" style="display: none;">loading..</h1>
+      <header class="header">
+        <div class="header__logo">
+          <img src="./assets/logo.png" alt="logo" />
+        </div>
 
-            <img id="firstVirus" class="virus" src="./assets/blue-virus.png" alt="corona virus" width="80px"
+        <!-- <img id="firstVirus" class="virus" src="./assets/blue-virus.png" alt="corona virus" width="80px"
                 height="80px">
             <img id="secondVirus" class="virus" src="./assets/blue-virus.png" alt="corona virus" width="80px"
-                height="80px">
+                height="80px"> -->
 
-            <select name="country" id="countrySelector" class="header__selection">
-                <option value="global" selected>--Global--</option>
-            </select>
+        <select name="country" id="countrySelector" class="header__selection">
+          <option value="global" selected>--Global--</option>
+        </select>
 
-            <div class="line-loader"></div>
-
-        </header>
-        <main class="flex-container">
-            <div class="chart">
-                <canvas id="visualChart"></canvas>
+        <div class="line-loader"></div>
+      </header>
+      <main class="flex-container">
+        <div class="chart">
+          <canvas id="visualChart"></canvas>
+        </div>
+        <aside class="feed">
+          <div class="card card--info">
+            <div class="card__body">
+              <div class="card__title">
+                <h3>Total number of infections</h3>
+              </div>
+              <div class="card__number">
+                <h1 id="confirmed"></h1>
+              </div>
             </div>
-            <aside class="feed">
-                <div class="card card--info">
-                    <div class="card__body">
-                        <div class="card__title">
-                            <h3>Total number of infections</h3>
-                        </div>
-                        <div class="card__number">
-                            <h1 id="confirmed"></h1>
-                        </div>
-                    </div>
-                </div>
-                <div class="card card--success">
-                    <div class="card__body">
-                        <div class="card__title">
-                            <h3>Total number of recoveries</h3>
-                        </div>
-                        <div class="card__number">
-                            <h1 id="recovery"></h1>
-                        </div>
-                    </div>
-                </div>
-                <div class="card card--danger">
-                    <div class="card__body">
-                        <div class="card__title">
-                            <h3>Total number of deaths</h3>
-                        </div>
-                        <div class="card__number">
-                            <h1 id="deaths"></h1>
-                        </div>
-                    </div>
-                </div>
-            </aside>
-        </main>
-        <section class="news">
-            <h2 class="news__heading">NEWS</h2>
-            <div class="news_body">
-                <a href="#" target="_blank" class="news__card">
-                    <img class="news__image" src="./assets/virus.png" alt="news image" width="80px" height="50px" />
-                    <div class="news__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem,
-                        animi dignissimos. Maxime ipsum beatae sit.</div>
-                </a>
-                <a href="#" target="_blank" class="news__card">
-                    <img class="news__image" src="./assets/virus.png" alt="news image" width="80px" height="50px" />
-                    <div class="news__description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Voluptatem,
-                        animi dignissimos. Maxime ipsum beatae sit.</div>
-                </a>
+          </div>
+          <div class="card card--success">
+            <div class="card__body">
+              <div class="card__title">
+                <h3>Total number of recoveries</h3>
+              </div>
+              <div class="card__number">
+                <h1 id="recovery"></h1>
+              </div>
             </div>
-        </section>
+          </div>
+          <div class="card card--danger">
+            <div class="card__body">
+              <div class="card__title">
+                <h3>Total number of deaths</h3>
+              </div>
+              <div class="card__number">
+                <h1 id="deaths"></h1>
+              </div>
+            </div>
+          </div>
+        </aside>
+      </main>
+      <section class="news">
+        <h2 class="news__heading">NEWS</h2>
+        <ul class="news__body">
+          <li>
+            <a href="#" target="_blank" class="news__card">
+              <img
+                class="news__image"
+                src="./assets/virus.png"
+                alt="news image"
+              />
+              <div class="news__description">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptatem, animi dignissimos. Maxime ipsum beatae sit.
+              </div>
+            </a>
+          </li>
+        </ul>
+      </section>
     </div>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"
-        integrity="sha512-s+xg36jbIujB2S2VKfpGmlC3T5V2TF3lY48DX7u2r9XzGzgPsa6wTpOQA7J9iffvdeBN0q9tKzRxVxw1JviZPg=="
-        crossorigin="anonymous"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"
+      integrity="sha512-s+xg36jbIujB2S2VKfpGmlC3T5V2TF3lY48DX7u2r9XzGzgPsa6wTpOQA7J9iffvdeBN0q9tKzRxVxw1JviZPg=="
+      crossorigin="anonymous"
+    ></script>
     <script src="./js/app.js" type="module"></script>
-
-</body>
-
+  </body>
 </html>
