👌👊improved the news functionality

--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Coronavirus Tracker</title>
     <link rel="stylesheet" href="./css/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
 
   <body>
@@ -64,21 +68,31 @@
         </aside>
       </main>
       <section class="news">
-        <h2 class="news__heading">NEWS</h2>
+        <h2 class="news__heading">CURRENT NEWS</h2>
         <ul class="news__body">
-          <li>
+          <!-- <li>
             <a href="#" target="_blank" class="news__card">
               <img
                 class="news__image"
-                src="./assets/virus.png"
+                src="http://unsplash.it/100/100"
                 alt="news image"
               />
-              <div class="news__description">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                Voluptatem, animi dignissimos. Maxime ipsum beatae sit.
+              <div class="news__details">
+                <h2 class="news__title">
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                </h2>
+                <p class="news__description">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                  Aspernatur veniam quisquam quos nulla quae soluta deserunt
+                  placeat itaque atque blanditiis?
+                </p>
+                <small class="news__time">
+                  <i class="fa fa-history"></i>
+                  30 mins ago
+                </small>
               </div>
             </a>
-          </li>
+          </li> -->
         </ul>
       </section>
     </div>
